--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <title>Auto-Style</title>
 
 <style>
+
+/* ===== FIX OVERFLOW ===== */
+*, *::before, *::after{
+box-sizing:border-box;
+}
+
 :root{
 --green:#2e7d32;
 --green-dark:#1b5e20;
@@ -13,18 +19,11 @@
 --bg:#f4f6f9;
 }
 
-/* ===== BASE ===== */
 body{
 margin:0;
 font-family:Arial,sans-serif;
 background:var(--bg);
 overflow-x:hidden;
-}
-
-.container{
-padding:15px;
-max-width:1400px;
-margin:auto;
 }
 
 /* ===== LOGIN ===== */
@@ -36,22 +35,17 @@ justify-content:center;
 align-items:center;
 background:linear-gradient(135deg,var(--green-dark),#000);
 z-index:9999;
+padding:15px;
 }
 
 .login-box{
 background:white;
-padding:40px 30px;
+padding:30px 25px;
 border-radius:20px;
-width:90%;
+width:100%;
 max-width:400px;
 text-align:center;
 box-shadow:0 30px 70px rgba(0,0,0,.4);
-animation:fadeIn .5s ease;
-}
-
-@keyframes fadeIn{
-from{opacity:0;transform:translateY(20px);}
-to{opacity:1;transform:translateY(0);}
 }
 
 .login-title{
@@ -60,8 +54,11 @@ font-weight:bold;
 margin-bottom:20px;
 }
 
-select,input{
+select,
+input{
 width:100%;
+max-width:100%;
+display:block;
 padding:12px;
 margin-bottom:15px;
 border-radius:12px;
@@ -80,12 +77,6 @@ font-size:16px;
 font-weight:bold;
 cursor:pointer;
 transition:.3s;
-box-shadow:0 8px 20px rgba(0,0,0,.2);
-}
-
-.login-btn:hover{
-transform:translateY(-2px);
-box-shadow:0 12px 25px rgba(0,0,0,.3);
 }
 
 .error-msg{
@@ -127,7 +118,6 @@ align-items:center;
 border-radius:14px;
 cursor:pointer;
 z-index:3000;
-box-shadow:0 10px 25px rgba(0,0,0,.3);
 }
 
 .side-menu{
@@ -157,11 +147,6 @@ border-radius:12px;
 background:#222;
 color:white;
 cursor:pointer;
-transition:.3s;
-}
-
-.side-menu button:hover{
-background:var(--green);
 }
 
 .overlay{
@@ -185,6 +170,8 @@ display:grid;
 grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
 gap:20px;
 padding:20px 15px 40px 15px;
+max-width:1400px;
+margin:auto;
 }
 
 .calculator{
@@ -192,12 +179,7 @@ background:white;
 padding:20px;
 border-radius:20px;
 box-shadow:0 10px 30px rgba(0,0,0,.08);
-transition:.3s;
-}
-
-.calculator:hover{
-transform:translateY(-5px);
-box-shadow:0 20px 40px rgba(0,0,0,.15);
+width:100%;
 }
 
 .title{
@@ -212,6 +194,11 @@ font-weight:bold;
 margin-bottom:15px;
 }
 
+.calculator input{
+width:100%;
+max-width:100%;
+}
+
 .btn{
 width:100%;
 padding:12px;
@@ -221,13 +208,7 @@ background:linear-gradient(135deg,var(--blue),#0d47a1);
 color:white;
 font-weight:bold;
 cursor:pointer;
-transition:.3s;
 margin-bottom:15px;
-}
-
-.btn:hover{
-transform:translateY(-2px);
-box-shadow:0 8px 20px rgba(0,0,0,.2);
 }
 
 table{
@@ -251,17 +232,14 @@ border-bottom:1px solid #eee;
 font-weight:bold;
 }
 
-/* ===== MOBILE FIX ===== */
+/* ===== MOBILE ===== */
 @media(max-width:768px){
 .wrapper{
 grid-template-columns:1fr;
 padding:15px;
 }
-.menu-toggle{
-top:10px;
-left:10px;
 }
-}
+
 </style>
 </head>
 <body>
@@ -307,7 +285,7 @@ left:10px;
 <div class="calculator">
 <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
 <div class="subtitle">АГРОПРОМБАНК</div>
-<input type="number" class="input sum">
+<input type="number" class="sum">
 <button class="btn btn-calc">РАССЧИТАТЬ</button>
 <table>
 <tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
@@ -322,7 +300,7 @@ left:10px;
 <div class="calculator">
 <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
 <div class="subtitle">ЭКСИМБАНК</div>
-<input type="number" class="input sum">
+<input type="number" class="sum">
 <button class="btn btn-calc">РАССЧИТАТЬ</button>
 <table>
 <tr><td>3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
@@ -336,7 +314,7 @@ left:10px;
 <div class="calculator">
 <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
 <div class="subtitle">СБЕРБАНК</div>
-<input type="number" class="input sum">
+<input type="number" class="sum">
 <button class="btn btn-calc">РАССЧИТАТЬ</button>
 <table>
 <tr><td>3 мес.</td><td class="coef">0.96</td><td class="result"></td></tr>
@@ -354,13 +332,10 @@ cashier:{name:"Кассир",pass:"2012"},
 evgeniy:{name:"Евгений",pass:"0186"},
 vadim:{name:"Вадим",pass:"2385"}
 };
-let currentUser="";
 
-/* LOGIN */
 loginBtn.onclick=function(){
 const u=userSelect.value;
 if(passwordInput.value===users[u].pass){
-currentUser=u;
 loginScreen.style.display="none";
 document.getElementById("currentUser").textContent="👤 "+users[u].name;
 }else errorMsg.textContent="Неверный пароль";
@@ -368,7 +343,6 @@ document.getElementById("currentUser").textContent="👤 "+users[u].name;
 
 function logout(){location.reload();}
 
-/* MENU */
 const sideMenu=document.getElementById("sideMenu");
 const overlay=document.getElementById("overlay");
 
@@ -377,15 +351,6 @@ sideMenu.classList.toggle("active");
 overlay.classList.toggle("active");
 }
 overlay.onclick=toggleMenu;
-
-/* SWIPE */
-let startX=0;
-document.addEventListener("touchstart",e=>{startX=e.touches[0].clientX;});
-document.addEventListener("touchend",e=>{
-let endX=e.changedTouches[0].clientX;
-if(startX<30 && endX>100)toggleMenu();
-if(startX>200 && endX<100)toggleMenu();
-});
 
 /* CALCULATORS */
 document.querySelectorAll(".calculator").forEach(calc=>{
